# decky-hydra-launcher

./: .gitignore  .gitmodules  README.md  eslint.config.js  main.py  package.json  plugin.json  pnpm-lock.yaml  rollup.config.js
backend/: Cargo.toml  Dockerfile  build.sh
backend/src/: hydra.rs  ludusavi.rs  main.rs  wine.rs
src/: api-types.ts  auth-guide.tsx  events.ts  game-cloud-save.tsx  game-cloud-saves.tsx  helpers.tsx  home.tsx  hydra-api.ts  index.tsx  qr-code.tsx  types.d.ts
src/components/: check-icon.tsx  cloud-icon.tsx  hydra-logo.tsx  index.ts
src/hooks/: index.ts  use-playtime.hook.ts
src/stores/: auth.store.ts  current-game.store.ts  index.ts  library.store.ts  navigation.store.ts  user.store.ts
src/styles/: globals.scss
src/ws/: ws-client.ts
src/ws/events/: friend-game-session.ts  friend-request.ts  types.ts
