[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusty-leveldb = "*"
dirs = "4.0"
fs_extra = "*"
tempfile = "*"
serde_yaml = "*"
tokio = { version = "1", features = ["full"] }
regex = "*"
anyhow = "*"
uuid = { version = "1", features = ["v4"] }
tar = "0.4"
reqwest = { version = "0.11", features = ["json"] }
hostname = "0.3"
